--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h2>Agregar la distancia</h2>
                 <input type="text" id="start" placeholder="Punto de partida">
                 <input type="text" id="end" placeholder="Destino">
-                <input type="number" id="weight" placeholder="Peso" value="1">
+                <input type="number" id="weight" placeholder="Distancia" value="1">
                 <button onclick="addEdge()">Agregar distancia</button>
             </div>
             <div class="input-container">
